RISC-V: debug.cpp help() is missing riscv line for pns

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 25
    • Affects Version/s: 17, 21, 24, 25
    • Component/s: hotspot
    • svc
    • b13
    • riscv
    • linux

      When calling help() in gdb, the there is no entry for riscv

      (gdb) call help()

      "Executing help"
      basic
        pp(void* p) - try to make sense of p
        ps() - print current thread stack
        pss() - print all thread stacks
        pm(int pc) - print Method* given compiled PC
        findm(intptr_t pc) - finds Method*
        find(intptr_t x) - finds & prints nmethod/stub/bytecode/oop based on pointer into it
        pns(void* sp, void* fp, void* pc) - print native (i.e. mixed) stack trace. E.g.
                         pns($sp, $rbp, $pc) on Linux/amd64 or
                         pns($sp, $ebp, $pc) on Linux/x86 or
                         pns($sp, $fp, $pc) on Linux/AArch64 or
                         pns($sp, 0, $pc) on Linux/ppc64 or
                         pns($sp, $s8, $pc) on Linux/mips or
                       - in gdb do 'set overload-resolution off' before calling pns()
                       - in dbx do 'frame 1' before calling pns()
      class metadata.
        findclass(name_pattern, flags)
        findmethod(class_name_pattern, method_pattern, flags)
      misc.
        flush() - flushes the log file
        events() - dump events from ring buffers
      compiler debugging
        debug() - to set things up for compiler debugging
        ndebug() - undo debug
      (gdb) call pns($sp, $fp, $pc)

      "Executing pns"
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x14b6252] Unsafe_AllocateMemory0+0x16
      j jdk.internal.misc.Unsafe.allocateMemory0(J)J+0 java.base@25-internal
      j jdk.internal.misc.Unsafe.allocateMemory(J)J+21 java.base@25-internal
      j sun.awt.X11.XlibWrapper.<clinit>()V+230 java.desktop@25-internal
      v ~StubRoutines::call_stub 0x0000003fdf7cf4c6
      V [libjvm.so+0xc54bc6] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x560
      V [libjvm.so+0x113ecb2] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*), JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x32
      V [libjvm.so+0xc5465c] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x38
      V [libjvm.so+0xc13ab6] InstanceKlass::call_class_initializer(JavaThread*)+0x33e
      V [libjvm.so+0xc121ea] InstanceKlass::initialize_impl(JavaThread*)+0x8a6
      V [libjvm.so+0xc10386] InstanceKlass::initialize(JavaThread*)+0x32
      V [libjvm.so+0xf6d860] LinkResolver::resolve_static_call(CallInfo&, LinkInfo const&, bool, JavaThread*)+0x94
      V [libjvm.so+0xf703b2] LinkResolver::resolve_invokestatic(CallInfo&, constantPoolHandle const&, int, JavaThread*)+0x58
      V [libjvm.so+0xf70044] LinkResolver::resolve_invoke(CallInfo&, Handle, constantPoolHandle const&, int, Bytecodes::Code, JavaThread*)+0xa4
      V [libjvm.so+0xc4229e] InterpreterRuntime::resolve_invoke(JavaThread*, Bytecodes::Code)+0x2d6
      V [libjvm.so+0xc4317c] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0x14a
      j sun.awt.X11.XErrorHandlerUtil.init(J)V+13 java.desktop@25-internal
      v ~StubRoutines::call_stub 0x0000003fdf7cf4c6
      V [libjvm.so+0xc54bc6] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x560
      V [libjvm.so+0x113ecb2] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*), JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x32
      V [libjvm.so+0xc5465c] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x38
      V [libjvm.so+0xd43b76] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*)+0x162
      V [libjvm.so+0xd4ee60] jni_CallStaticVoidMethodV+0x122
      C [libjava.so+0x1c2dc] JNU_CallStaticMethodByName+0x13e
      C [libawt_xawt.so+0x4b8f8] awt_init_Display+0x2ba
      C [libawt_xawt.so+0x4bb18] Java_sun_awt_X11GraphicsEnvironment_initDisplay+0x42
      j sun.awt.X11GraphicsEnvironment.initDisplay(Z)V+0 java.desktop@25-internal
      j sun.awt.X11GraphicsEnvironment.initStatic()V+160 java.desktop@25-internal
      j sun.awt.X11GraphicsEnvironment.<clinit>()V+0 java.desktop@25-internal
      v ~StubRoutines::call_stub 0x0000003fdf7cf4c6
      V [libjvm.so+0xc54bc6] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x560
      V [libjvm.so+0x113ecb2] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*), JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x32
      V [libjvm.so+0xc5465c] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x38
      V [libjvm.so+0xc13ab6] InstanceKlass::call_class_initializer(JavaThread*)+0x33e
      V [libjvm.so+0xc121ea] InstanceKlass::initialize_impl(JavaThread*)+0x8a6
      V [libjvm.so+0xc10386] InstanceKlass::initialize(JavaThread*)+0x32
      V [libjvm.so+0xc3e940] InterpreterRuntime::_new(JavaThread*, ConstantPool*, int)+0x13c
      j sun.awt.PlatformGraphicsInfo.createGE()Ljava/awt/GraphicsEnvironment;+0 java.desktop@25-internal
      j java.awt.GraphicsEnvironment$LocalGE.createGE()Ljava/awt/GraphicsEnvironment;+0 java.desktop@25-internal
      j java.awt.GraphicsEnvironment$LocalGE.<clinit>()V+0 java.desktop@25-internal
      v ~StubRoutines::call_stub 0x0000003fdf7cf4c6
      V [libjvm.so+0xc54bc6] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x560
      V [libjvm.so+0x113ecb2] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*), JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x32
      V [libjvm.so+0xc5465c] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x38
      V [libjvm.so+0xc13ab6] InstanceKlass::call_class_initializer(JavaThread*)+0x33e
      V [libjvm.so+0xc121ea] InstanceKlass::initialize_impl(JavaThread*)+0x8a6
      V [libjvm.so+0xc10386] InstanceKlass::initialize(JavaThread*)+0x32
      V [libjvm.so+0xf6d748] LinkResolver::resolve_field(fieldDescriptor&, LinkInfo const&, Bytecodes::Code, bool, JavaThread*)+0x73c
      V [libjvm.so+0xf6cfea] LinkResolver::resolve_field_access(fieldDescriptor&, constantPoolHandle const&, int, methodHandle const&, Bytecodes::Code, bool, JavaThread*)+0x74
      V [libjvm.so+0xc411f6] InterpreterRuntime::resolve_get_put(Bytecodes::Code, int, methodHandle&, constantPoolHandle&, bool, JavaThread*)+0xd6
      V [libjvm.so+0xc41104] InterpreterRuntime::resolve_get_put(JavaThread*, Bytecodes::Code)+0x96
      V [libjvm.so+0xc4316c] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0x13a
      j java.awt.GraphicsEnvironment.getLocalGraphicsEnvironment()Ljava/awt/GraphicsEnvironment;+0 java.desktop@25-internal
      j java.awt.Window.initGC(Ljava/awt/GraphicsConfiguration;)Ljava/awt/GraphicsConfiguration;+7 java.desktop@25-internal
      j java.awt.Window.init(Ljava/awt/GraphicsConfiguration;)V+41 java.desktop@25-internal
      j java.awt.Window.<init>()V+114 java.desktop@25-internal
      j java.awt.Frame.<init>(Ljava/lang/String;)V+1 java.desktop@25-internal
      j java.awt.Frame.<init>()V+3 java.desktop@25-internal
      j ChoiceMouseEventTest.<init>()V+1
      j ChoiceMouseEventTest.main([Ljava/lang/String;)V+4
      v ~StubRoutines::call_stub 0x0000003fdf7cf4c6
      V [libjvm.so+0xc54bc6] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x560
      V [libjvm.so+0x113ecb2] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*), JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x32
      V [libjvm.so+0xc5465c] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x38
      V [libjvm.so+0xd43b76] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*)+0x162
      V [libjvm.so+0xd4eca8] jni_CallStaticVoidMethod+0x142
      C [libjli.so+0x4efc] invokeStaticMainWithArgs+0x72
      C [libjli.so+0x5d34] JavaMain+0xbae
      C [libjli.so+0xb568] ThreadJavaMain+0x24
      C [libc.so.6+0x7331c] start_thread+0x108
      (gdb)

            Assignee:
            Sendao Yan
            Reporter:
            Sendao Yan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: