8350723: RISC-V: debug.cpp help() is missing riscv line for pns